# project-workflow

./: .gitignore  AGENTS.md  CHANGELOG.md  COMPATIBILITY.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.agents/skills/project-backlog/: SKILL.md
.agents/skills/project-clarify/: SKILL.md
.agents/skills/project-epic/: SKILL.md
.agents/skills/project-fix/: SKILL.md
.agents/skills/project-implement/: SKILL.md
.agents/skills/project-planner/: SKILL.md
.agents/skills/project-qa-review/: SKILL.md
.agents/skills/project-requirements/: SKILL.md
.agents/skills/project-smoke-bomb/: SKILL.md
.agents/skills/project-task/: SKILL.md
.codex/environments/: environment.toml
.github/: copilot-instructions.md
.github/prompts/: Clarify.prompt.md  Constitution.prompt.md  Delegate.prompt.md  Epic.prompt.md  Implement.prompt.md  Planner.prompt.md  QAReview.prompt.md  Requirements.prompt.md  Retro.prompt.md  Scaffold.prompt.md  Task.prompt.md
.github/workflows/: ci.yml  release.yml
.project-workflow/: BACKLOG.md  CONSTITUTION.md  TRACKER.md  config.json  guidance.md  manifest.json
.project-workflow/cli/: README.md  workflow.py
.project-workflow/tasks/APP-001-Cursor-Claude/: IMPLEMENTATION.md  REQUIREMENTS.md
.project-workflow/tasks/APP-002-Delegate-Agent/: IMPLEMENTATION.md  REQUIREMENTS.md
.project-workflow/tasks/APP-003-Epic-Support/: IMPLEMENTATION.md  REQUIREMENTS.md
.project-workflow/tasks/EPIC-002-Epic-Acceptance-Rigor/: ACCEPTANCE-AUDIT.md  ACCEPTANCE-MAP.md  REQUIREMENTS.md  TRACKER.md
.project-workflow/tasks/EPIC-003-Workflow-Discipline-Gates/: ACCEPTANCE-AUDIT.md  ACCEPTANCE-MAP.md  REQUIREMENTS.md  TRACKER.md
.project-workflow/tasks/EPIC-004-Epic-Lifecycle-Polish/: ACCEPTANCE-AUDIT.md  ACCEPTANCE-MAP.md  REQUIREMENTS.md  RETRO.md  TRACKER.md
.project-workflow/tasks/EPIC-005-Project-Backlog-Support/: ACCEPTANCE-AUDIT.md  ACCEPTANCE-MAP.md  REQUIREMENTS.md  RETRO.md  TRACKER.md
.project-workflow/tasks/EPIC-006-Epic-Control-Gates-For-Requirement-Drift-Prevention/: ACCEPTANCE-AUDIT.md  ACCEPTANCE-MAP.md  DECOMPOSITION.md  EPIC-CONTRACT.md  REQUIREMENTS.md  RETRO.md  TRACKER.md
.project-workflow/tasks/EPIC-007-Repo-Migration-And-Adoption-Tooling/: ACCEPTANCE-MAP.md  AMENDMENTS.md  EPIC-CONTRACT.md  REQUIREMENTS.md  RETRO.md  TRACKER.md
.project-workflow/tasks/EPIC-007-Versioned-Repository-Upgrade-System/: ACCEPTANCE-AUDIT.md  ACCEPTANCE-MAP.md  DECOMPOSITION.md  EPIC-CONTRACT.md  REQUIREMENTS.md  RETRO.md  TRACKER.md
.project-workflow/tasks/FIX-001-Explicit-Fix-Id-Generation-Configuration/: FIX.md
.project-workflow/tasks/FIX-002-Avoid-False-Workflow-References-In-Urls/: FIX.md
.project-workflow/tasks/FIX-004-Backlog-Epic-Promotion-Creates-Current-Epic-Artifacts/: FIX.md
.project-workflow/tasks/TASK-001-Executable-Workflow-Validation-Harness/: IMPLEMENTATION.md  REQUIREMENTS.md
.project-workflow/tasks/TASK-002-Tracker-Safe-Lifecycle-Commands/: IMPLEMENTATION.md  REQUIREMENTS.md
.project-workflow/tasks/TASK-003-Configurable-Id-Namespaces/: IMPLEMENTATION.md  REQUIREMENTS.md
.project-workflow/tasks/TASK-026-Collision-Resistant-Id-Generation/: IMPLEMENTATION.md  REQUIREMENTS.md
.project-workflow/tasks/TASK-027-Accepted-Doctor-Warning-Suppression/: IMPLEMENTATION.md  REQUIREMENTS.md
.project-workflow/tasks/TASK-038-Lightweight-Fix-And-Defect-Workflow/: IMPLEMENTATION.md  REQUIREMENTS.md
.project-workflow/tasks/TASK-039-Comprehensive-Readme-Refresh/: IMPLEMENTATION.md  REQUIREMENTS.md
.project-workflow/tasks/TASK-047-Smoke-Bomb/: IMPLEMENTATION.md  REQUIREMENTS.md
.project-workflow/tasks/TASK-048-Immutable-Release-Contract-And-Trusted-Distribution/: EVIDENCE.json  IMPLEMENTATION.md  REQUIREMENTS.md
scripts/: release_contract.py  verify_package_journeys.py
src/project_workflow/: __init__.py  _version.py  cli.py
src/project_workflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_doctor.py  test_release_contract.py
(+132 files in other folders)
