[build-system]
requires = ["setuptools>=65.0", "setuptools-scm>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "project-workflow"
version = "0.1.1"
description = "Spec-driven development with GitHub Copilot: workflow scaffolding and task management CLI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "John Detlefs", email = "john@example.com"}
]
requires-python = ">=3.10"
keywords = ["workflow", "spec-driven", "ai", "github-copilot", "task-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/johndetlefs/project-workflow"
Repository = "https://github.com/johndetlefs/project-workflow.git"
Issues = "https://github.com/johndetlefs/project-workflow/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
project = "project_workflow.cli:main"

[tool.setuptools]
packages = ["project_workflow"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
project_workflow = [
    "templates/*",
    "prompts/*.md",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "UP",   # pyupgrade
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
