[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-workflow"
dynamic = ["version"]
description = "Spec-driven development with GitHub Copilot, Claude Code, OpenAI Codex, and Cursor: workflow scaffolding, QA review, retro, and task management CLI"
readme = "README.md"
license = "MIT"
authors = [
    {name = "John Detlefs", email = "john@example.com"}
]
requires-python = ">=3.10"
keywords = ["workflow", "spec-driven", "ai", "github-copilot", "claude-code", "codex", "cursor", "task-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/johndetlefs/project-workflow"
Repository = "https://github.com/johndetlefs/project-workflow.git"
Issues = "https://github.com/johndetlefs/project-workflow/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=7.0",
    "setuptools>=65.0",
]

[project.scripts]
project = "project_workflow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["project_workflow*"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "project_workflow._version.__version__"}

[tool.setuptools.package-data]
project_workflow = [
    "templates/*",
    "prompts/*.md",
    "codex/AGENTS.md",
    "codex/skills/*/SKILL.md",
    "cursor/rules/*.mdc",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "UP",   # pyupgrade
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
